# CIS700_SNAP

./: snap-upenn-ip.txt  update-ip.bash
AndrewNotes/: AndrewLog9_12  elevatorcontroller
catkin_ws/: .rosinstall  Repo.keys
catkin_ws/src/: .rosinstall  3d_nav_executive  cv_bridge  octomap_collision_check
docs/ocv3-benchmarks/: calib3d_posix_nuc4250u-no-ocl_c12243c_20150904-170757.xml  calib3d_posix_tmb113-i3_317u_894f922_20150909-182802.xml  calib3d_posix_xu3-no-ocl_c12243c_20150905-140536.xml  calib3d_report.html  core_posix_nuc4250u-no-ocl_c12243c_20150904-151734.xml  core_posix_xu3-with-ocl_c12243c_20150905-090306.xml  core_report.html  features2d_posix_xu3-no-ocl_c12243c_20150909-113718.xml  latentsvm_posix_xu3-no-ocl_c12243c_20150909-114352.xml  objdetect_posix_nuc4250u-no-ocl_c12243c_20150904-160609.xml  objdetect_posix_tmb113-i3_317u_894f922_20150909-182642.xml  objdetect_posix_xu3-no-ocl_c12243c_20150905-140200.xml  objdetect_report.html  reg_posix_xu3-no-ocl_c12243c_20150909-114539.xml  reg_report.html  test_core-xu3_with_ocl-20150906013100.xml  tracking_posix_xu3-no-ocl_c12243c_20150909-115719.xml  video_posix_xu3-no-ocl_c12243c_20150909-135048.xml  video_report.html  xfeatures2d_posix_xu3-no-ocl_c12243c_20150909-141803.xml  ximgproc_posix_xu3-no-ocl_c12243c_20150909-180244.xml
rosbuild_ws/: .rosinstall  setup.bash  setup.sh  setup.zsh
trunk/: snap-upenn-ip.txt  update-ip.bash
trunk/AndrewNotes/: AndrewLog9_13  elevatorcontroller
trunk/catkin_ws/: .rosinstall  Package.list  (+1 more)
trunk/catkin_ws/src/snap_rviz_plugins/: package.xml  plugin_description.xml
(+286 files in other folders)
