<package>
  <name>snap_rviz_plugins</name>
  <version>0.1.0</version>
  <description>
     RViz plugins for the SNAP robot.
  </description>
  <maintainer email="nstiurca@seas.upenn.edu">Nicu Stiurca</maintainer>
  <license>BSD</license>

  <url>https://www.assembla.com/spaces/cis700-snap/tickets/178</url>
  <author>Nicu Stiurca</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>

  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
